Pin the two --gpu offer paths against each other
Which shapes --gpu accepts is decided twice: eval/LinalgGpu is what the
interpreter runs and codegen/jvm/JvmGpuTemplate is the copy a compiled
program carries, and both sit above am.ik.gpu, so neither backend can
correct a disagreement. A shape one accepts and the other declines is a
program that runs java -jar and -o out.class down different paths at the
same inputs with nothing failing.

Thirteen predicates are duplicated across the two files -- twelve under
one name each and one under two, LinalgGpu.suffixLength against
JvmGpuTemplate.softmaxMaskLength, which is why grep -rn suffixLength
reads as if the mask rule were written once. Thirteen per-helper pins
would fix only that today's thirteen agree and would say nothing about a
fourteenth, so the question is asked from outside both paths instead:
one set of operands, each path's own call shape, and the two must agree
on accept versus decline and answer the same bits where they accept.

The shapes are the accept boundary, not coverage -- a mask that is a
trailing suffix and one whose middle axis is extent 1, an exactly-equal
pair, a rank mismatch, a fold on the last axis and one that is not, a
resident operand and a fresh one, both widths -- and a census assertion
fails the run if the table did not both accept and decline, so a machine
that turned everything down cannot agree vacuously. Verified by mutation:
widening the compiled mask rule alone fails naming the case, and dropping
one member from the compiled set fails naming the member.

Only the member-set half is device-free; the shape half cannot be asked
without a device, because a shape decline and a no-device decline are the
same null on both paths and GpuDevice is sealed. That is .todo/656.

The thirteen bodies read against each other found no pair that is a
different predicate; what differs is recorded in .kb/gpu.md.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https:/